[gd_scene load_steps=13 format=3 uid="uid://cacbky8t4sj0x"]

[ext_resource type="Texture2D" uid="uid://o4tudvtudvh4" path="res://Assets/Textures/Tests/Greem3-1p.png" id="2_11cuf"]
[ext_resource type="Script" uid="uid://ddkd3q4dso4qe" path="res://Sources/Scripts/Entities/passive_manager.gd" id="2_riunp"]
[ext_resource type="Script" uid="uid://cma12r3ug0fkc" path="res://Sources/Scripts/Entities/hitbox_component.gd" id="2_wp6k6"]
[ext_resource type="Script" uid="uid://dmokrp31cr8u7" path="res://Sources/Scripts/Entities/inventory_component.gd" id="3_a7als"]
[ext_resource type="Script" uid="uid://ld0ex48thjfj" path="res://Sources/Scripts/Entities/buff_manager.gd" id="3_gn3k3"]
[ext_resource type="Script" uid="uid://daa8uc0h1svdw" path="res://Sources/Scripts/Entities/Player/player.gd" id="4_5pj7f"]
[ext_resource type="Script" uid="uid://bd1it0wr4if4i" path="res://Sources/Scripts/Entities/health_component.gd" id="6_wp6k6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_hl03s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_11cuf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aop4j"]
size = Vector2(298.3606, 301.63937)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hl03s"]
size = Vector2(257, 280)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wp6k6"]
size = Vector2(220, 260)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a7als"]
size = Vector2(222, 262)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("4_5pj7f")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="PassiveManager" type="Node" parent="."]
script = ExtResource("2_riunp")

[node name="BuffManager" type="Node" parent="."]
script = ExtResource("3_gn3k3")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hl03s")

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2(-6.1035156e-05, -1.6393127)
shape = SubResource("RectangleShape2D_aop4j")

[node name="Inventory" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("3_a7als")

[node name="InventoryCollision" type="CollisionShape2D" parent="Inventory"]
position = Vector2(-0.5, -1)
shape = SubResource("RectangleShape2D_hl03s")
debug_color = Color(0.645573, 0.5191611, 0.16423756, 0.41960785)

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("2_wp6k6")
min_damage = 5.0
max_damage = 10.0

[node name="HitboxCollision" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(244, 4)
shape = SubResource("RectangleShape2D_wp6k6")
debug_color = Color(0.80121416, 0.22135612, 0.1792337, 0.41960785)

[node name="HealthComponent" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8
script = ExtResource("6_wp6k6")
actual_health = 1.0
max_health = 1.0

[node name="HealthCollision" type="CollisionShape2D" parent="HealthComponent"]
position = Vector2(6, 4)
shape = SubResource("RectangleShape2D_a7als")
debug_color = Color(0, 1, 0.21568628, 0.41960785)

[connection signal="area_entered" from="Inventory" to="Inventory" method="_on_area_entered"]
[connection signal="area_entered" from="HitboxComponent" to="HitboxComponent" method="_on_area_entered"]
[connection signal="area_entered" from="HealthComponent" to="HitboxComponent" method="_on_health_component_area_entered"]
[connection signal="on_dead" from="HealthComponent" to="." method="_on_dead"]
